--- a/week-5-2/css/main.css
+++ b/week-5-2/css/main.css
@@ -35,7 +35,7 @@ nav ul a{
     color: #D7E8BA;
     border: 1px solid #2E5077 ; 
 }
-
+/* couldn't get this to work when put in the same selection as nav ul a */
 nav ul {
     list-style: none;
 }
