--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,53 +1,16 @@
-nav ul li{
-    text-align: center;
-    font-size: 1.5em;
-    width: calc(100%/3);
-    height: 2rem;
-    display: inline-block;
-    border-right: 1px solid black ;
-}
-
-nav ul li:last-child{
-    border: none;
-}
-
-ul li {
-    margin-right: -4px;
-}
-
-article img{
-    width: 25%;
-    float: left;
-    margin: .75em;
-}
-
-
-a {
-    color: inherit;
-    text-decoration: inherit;
-}
-
-#story {
-    box-sizing: border-box;
-    margin: .8em;
-
-}
-
-section div {
-    box-sizing: border-box;
-    border: 1px solid black;
-}
-
-img{
-    width:100% ;
-}
-
+/* Header styling */
 .header {
     position: relative;
     text-align: center;
     color: white;
 }
 
+/* setting bounds of image */
+img{
+    width:100% ;
+}
+
+/* centering text over image */
 .centered{
     position: absolute;
     top: 70%;
@@ -55,20 +18,22 @@ img{
     transform: translate(-50%, -50%);
 }
 
+/* Setting bounds of webpage to specific width */
 .container{
     max-width: 800px;
     margin: 0px  auto ;
     background-color: #e3fffd;
     position: relative;
+    margin-bottom: 1em;
 }
 
-
-
+/* Styling body text and background colour */
 body {
     background-color: #aad4cf;
     font-family: helvetica, arial;
 }
 
+/*HEADER STYLING ZONE*/
 h1{
     font-size: 3em;
 }
@@ -85,24 +50,110 @@ h3{
 }
 
 h4{
-    font-size: 1.1em;
+    font-size: 1.25em;
     margin-bottom: .5em;
     margin-top: .5em;
 }
+/* header styling zone finished */
 
-article p{
+/* styling the nav bar */
+nav ul li{
+    text-align: center;
+    font-size: 1.5em;
+    width: calc(100%/3);
+    height: 2rem;
+    display: inline-block;
+    border-right: 1px solid black ;
+}
+
+/* removing border on last child */
+nav ul li:last-child{
+    border: none;
+}
+
+/* fixing overlap on right side of page */
+nav ul li {
+    margin-right: -4px;
+}
+
+/*Integrating links, making styling look the same  */
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+/* setting margin */
+#story, #facts, #contact {
+    box-sizing: border-box;
+    margin: .8em;
+}
+
+/* putting border around contact section */
+section div {
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+
+/* setting the article image inline */
+article img{
+    width: 25%;
+    float: left;
+    margin: .75em;
+}
+
+/* More text styling */
+article p, #facts{
     line-height: 1.4em;
     font-size: .9em;
 }
 
-#facts{
+/* List styling for facts */
+article ul li::before {
+    content: "\2022";
+    display: inline-block;
+    width: .8em;
+}
+
+/* Styling Contact area */
+section form {
     line-height: 1.4em;
     font-size: .9em;
     box-sizing: border-box;
     margin: .8em;
 }
 
-#contact{
+/* Input box styling */
+#fullname, #email {
+    width: 99%;
+    outline: none;
+    border: 1px solid #ccc;
+}
+
+/* textarea styling */
+#message {
+    outline:none;
+    width: 100%;
+    height: 150px;
     box-sizing: border-box;
-    margin: .8em;
+    border: 1px solid #ccc;
+    resize: none;
+}
+
+/* Send button Styling */
+.send {
+    margin-top: 1em;
+    border: 1px solid black;
+    padding: .5rem .2rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: .6em;
+}
+
+/* Footer */
+footer {
+    font-size: .8em;
+    text-align: right;
+    margin-right: .8em;
+    padding-bottom: 1em;
 }
