--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -131,17 +131,29 @@ p{
 
 .art,
 .artbig{
-	width: calc(100%/3);
+	width: 50%;
 	float: left;
 	position: relative;
 	padding: .3em;
 }
 
-.artbig{
-	width: calc(100%/3*2);
+.side-nav{
+	display: none;
 }
 
+.mobile-nav ul li {
+    text-align: center;
+    font-size: 1.5em;
+    width: 33%;
+	height: 2rem;
+	display: inline-block;
+	border: 1px solid red;
+}
 
+.head{
+	width: 25%;
+	position: relative;
+}
 
 
 
@@ -149,17 +161,19 @@ p{
 					Desktop Styles
 --------------------------------------------------------- */
 
-@media screen and (min-width: 600px){
+@media screen and (min-width: 1600px){
     
     html {
 		font-size: 16px;
     }
 	
-	.nav{
+	.mobile-nav, .head{
 		display: none;
 	}
+
 	
     .side-nav {
+		display: inline-block;
         height: 100%; /* Full-height: remove this if you want "auto" height */
         width: 180px; /* Set the width of the sidebar */
         position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -175,5 +189,17 @@ p{
         width: 150px;
     }
 
+	
+	.art,
+	.artbig{
+		width: calc(100%/3);
+		float: left;
+		position: relative;
+		padding: .3em;
+	}
+
+	.artbig{
+		width: calc(100%/3*2);
+	}
 
 }
