--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -147,12 +147,13 @@ p{
     width: 33%;
 	height: 2rem;
 	display: inline-block;
-	border: 1px solid red;
 }
 
 .head{
 	width: 25%;
 	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
