--- a/Final/css/main.css
+++ b/Final/css/main.css
@@ -86,6 +86,9 @@ h3{
 h4{
 	font-size: 1.5rem;
 }
+h5{
+    font-weight: bold;
+}
 
 h1,h2,h3,h4{
     font-weight: 600;
@@ -123,22 +126,75 @@ a.button-3{
     background-color: rgba(34, 34, 34, 0.75);
     border: 1px solid #c78c06 ;
 }
-/*---------------- WELCOME ----------------------*/
 
-section.welcome {
-    height: 500px;
-    background: grey url("../images/main-banner.jpg") no-repeat center bottom;
-    background-size: cover;
+/* ------------------------------NAV/HEADER---------------------------- */
+.site-header{
+    background-color: #222;
+}
+.site-header img {
+    width: 120px;
+}
+.topnav a {
+    float: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+    color: #c78c06;
 }
 
-.welcome .background {
+.topnav .current {
+    background-color: #c78c06;
+    color: #222;
+}
+
+.topnav input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+    width: 88.5%;
+    display:inline;
+    height: 28px;
+  }
+
+.search-container button{
+    float: right;
+    padding: 6px;
+    margin-top: 8px;
+    background: #222;
+    font-size: .5rem;
+    color: #c78c06;
+    border: 1px #c78c06 solid;
+    cursor: pointer;
+    width: 36px;
+    display: inline;
+}
+
+
+/*---------------- WELCOME ----------------------*/
+
+section.welcome-zone {
+    max-height:1000px;
+    background: grey url("../images/main-banner.jpg") no-repeat center bottom;
+    background-size: cover;
+    vertical-align: middle ;
+}
+
+.welcome-zone .background {
     background-color: rgba(34, 34, 34, 0.6);
 }
 
-.welcome .container p, .welcome .container h1 {
+.welcome-zone .container p, .welcome-zone .container h1 {
     color: white;
+    padding-bottom: 1rem;
 }
 
+.welcome-zone {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 /* ABOUT US */
 
 .about-us {
@@ -147,17 +203,7 @@ section.welcome {
 
 /* --------------- OUR SERVICES ---------------------- */
 
-.our-services {
-    grid-template-areas: 
-        "a1"
-        "a2"
-        "a3"
-        "a4"
-        "a5"
-    ;
-    display:grid ;
-    gap: 1rem;
-}
+
 
 .our-services h3, 
 .our-services p, 
@@ -215,4 +261,154 @@ section.welcome {
     margin-top: -1rem;
     padding: 1rem;
     background-color: #FFE6AC ;
+    margin-bottom: 10px;
+}
+
+hr.line {
+    border-top: 2px #c78c06 solid;
+}
+
+/* ------------------ CONTACT US ---------------------------- */
+
+.contact-us input[type=text], textarea {
+    width: 100%;
+    height: 1rem;
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box;
+    margin-bottom: 1rem;
+    resize: none;
+  }
+
+  textarea{
+      height: 10rem;
+  }
+
+  input[type=email] {
+    width: 100%;
+    height: 1rem;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 1rem; 
+    resize: none;
+  }
+  
+  .contact-us input[type=submit] {
+    background-color: #222;
+    color: #c78c06;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+  }
+
+/* HOURS OF OPERATION */
+
+table{
+    width: 100%;
+}
+table,th,td {
+    border: 1px black solid;
+}
+
+th {
+    background-color: #FFE6AC ;
+    padding: 1rem;
+}
+
+td {
+    padding: .8rem;
+}
+
+/* ---------------------- FOOTER --------------------------------*/
+
+footer, footer.p {
+    background-color: #222;
+    color: #c78c06;
+    line-height: 2.3rem;
+}
+
+/*-----------------------------------------------------
+                     DESKTOP STYLING
+    ------------------------------------------------- */
+
+@media screen and (min-width: 1200px){
+    /* buttons */
+    a.button-2 {
+        width:75%;
+    }
+    /* header */
+    .topnav a {
+        float: left;
+        width: auto;
+        width: auto;
+    }
+
+    .site-header{
+        height: 120px;
+    }
+
+    .search-container{
+        float: right;
+        min-width: 0;
+    }
+
+    .search-container button{
+        width: 36px;
+    }
+    .site-header img {
+        float: left;
+        width: 80px;
+    }
+
+    .topnav input[type=text] {
+        width: auto;
+    }
+
+    /* welcome */
+
+    .background {
+        max-width: 1200px;
+        align-content: center;
+        margin: 0 auto;
+    }
+
+    /* our team */
+    .our-team{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .john-doe,
+    .john-doe-img,
+    .bob-rite,
+    .bob-rite-img {
+        flex-basis: 40%;
+    }
+
+    .john-doe,
+    .bob-rite{
+    margin-top: 0rem;
+    padding: 1rem;
+    margin-bottom: 0px;
+    }
+
+    /* --------------- OUR SERVICES ---------------------- */
+    .our-services {
+    display: grid;
+    gap: 1rem;
+    grid-template-areas: 
+        "a1 a1 a1 a2 a2 a2"
+        "a3 a3 a4 a4 a5 a5"
+    ;
+    }
+
+    .digital-transformation img,
+    .marketing img{
+        width: auto;
+    }
 }
