--- a/MTM6201/Week-5/Landing-Page/css/style.css
+++ b/MTM6201/Week-5/Landing-Page/css/style.css
@@ -138,13 +138,14 @@ input {
 #last-name,
 #email,
 #phone-number {
+	padding-left: 10px;
 	width: 100%;
 	height: 40px;
 	margin-bottom: 15px;
 	border-radius: 11px;
 	border: 0px solid;
 	background-color: #F4F4F5;
-	font-style: #9B9B9B;
+	color: #9B9B9B;
 }
 
 
@@ -226,7 +227,7 @@ h5, p {
 	border-radius: 11px;
 	border: 0px solid;
 	background-color: #F4F4F5;
-	font-style: #9B9B9B;
+	color: #9B9B9B;
 }
 
 /* removing selector for numbers in chrome, safari, edge, opera*/
@@ -318,7 +319,7 @@ input#calculate:hover{
 
 	input#send {
 		font-size: 32px;
-		padding: 12px auto ;
+		height: 60px ;
 	}
 
 	/* ------------------------ footer------------------------------ */
