--- a/Experimenting/FUCKHEADS/css/style.css
+++ b/Experimenting/FUCKHEADS/css/style.css
@@ -129,8 +129,8 @@ body{
 
 }
 
-/* about styling */
-.about {
+/*-------------------------- about styling ------------------------------------------*/
+.block {
     scroll-snap-align: start;
     padding: 0 auto;
     height: 100vh;
@@ -138,7 +138,7 @@ body{
     flex-flow: row nowrap;
 }
 
-.about-text {
+.text-block {
     max-width: 50%;
     align-self:center;
     text-align: justify;
@@ -185,5 +185,58 @@ body{
 }
 
 #img-4 {
+    transform: translate(0, -300px);
+}
+
+/*-------------------------- contact styling ------------------------------------------*/
+section.contact {
+    flex-flow:row-reverse nowrap;
+}
+
+.contact:nth-child(1) {
+    padding-left: -5em;
+    padding-right: 0;
+}
+
+.contact-img {
+    height:100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+/* ---------------------images------------------------- */
+
+.images {
+    scroll-snap-align: start;
+    height: 100vh;
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.images-item {
+    width: 50vw;
+    height: 50vh;
+    overflow: hidden;
+} 
+
+.gallery-img {
+  width:50vw;
+}
+
+#img-5 {
+    transform: translate(0, -171px)
+}
+
+#img-6 {
+    transform: translate(0, -20px);
+}
+#img-7 {
+    transform: translate(0, -200px);
+}
+
+#img-8 {
     transform: translate(0, -300px);
 }
