--- a/MTM6201/midterm/css/style.css
+++ b/MTM6201/midterm/css/style.css
@@ -48,3 +48,130 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+/* ------------------------------------------- CUSTOM STYLES---------------------------------------------------- */
+
+.container {
+    margin: 0 auto;
+    padding: 0px 114px;
+}
+
+/* text styling */
+body {
+    font-family: 'Work Sans', sans-serif ;
+    background-color: blue;
+}
+
+
+h1 {
+    font-weight: 900;
+    font-size: 60px;
+}
+
+p {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.nav a {
+    font-weight: 300;
+    font-style: italic;
+    font-size: 24px;
+    color: black;
+    border: none 2px solid;
+    width:70px;
+    box-sizing: border-box;
+    padding: 36px 60px;
+}
+
+/* ----------------------nav------------------------------ */
+.navbar {
+    border-bottom: black 2px solid;
+    display:flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: 100px;
+    align-content: space-between;
+}
+
+#nav-links {
+    display: flex;
+    flex-flow: row-reverse nowrap;
+    justify-content: space-around;
+    width: 60vw;
+}
+
+
+.logo {
+    width: 540px;
+    height: auto;
+}
+
+#current-page {
+    color: white;
+    border: white 2px solid;
+    padding: 36px 60px;
+    text-decoration: none;
+}
+
+/* -------------------------- landing area---------------------------------------- */
+
+.media .image img {
+    display: block;
+    max-width: 100vw;
+    height: auto;
+  }
+
+.landing-background {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    position: relative;
+    overflow: hidden;
+}
+
+.size {
+    height: 655px;
+}
+
+#landing-layer-3 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row: 1;
+    justify-self: center ;
+    width: 100%;
+}
+
+#landing-layer-2 {
+    grid-column-start: 2 ;
+    grid-column-end: 6;
+    grid-row: 1;
+    justify-self: center ;
+    width: 100%;
+}
+
+#landing-layer-1 {
+    grid-column-start: 1 ;
+    grid-column-end: 7;
+    grid-row: 1;
+    justify-self: center ;
+    width: 100%;
+}
+
+
+/* -------------barcode---------------------------- */
+
+.barcode {
+    font-family: 'Libre Barcode EAN13 Text', none;
+    font-size: 400px;
+    margin: -22px;
+    padding: -22px;
+}
+
+.barcode-box {
+    height: 200px;
+    border: 1px black solid;
+    overflow: hidden; /*IMPORTANT TAG WOW I DIDNT KNOW THIS EXISTED  */
+    background-color: white;
+}
