--- a/MTM6201/midterm/css/style.css
+++ b/MTM6201/midterm/css/style.css
@@ -76,46 +76,62 @@ p {
     color: white;
 }
 
-.nav a {
+a {
     font-weight: 300;
     font-style: italic;
     font-size: 24px;
     color: black;
-    border: none 2px solid;
-    width:70px;
-    box-sizing: border-box;
-    padding: 36px 60px;
 }
 
 /* ----------------------nav------------------------------ */
+
 .navbar {
     border-bottom: black 2px solid;
-    display:flex;
-    flex-wrap: nowrap;
-    align-items: center;
     height: 100px;
-    align-content: space-between;
 }
 
-#nav-links {
-    display: flex;
-    flex-flow: row-reverse nowrap;
-    justify-content: space-around;
-    width: 60vw;
+#nav{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) ;
+    column-gap: 16px ;
+    align-items: center;
+    height: 100%;
+}
+/* centers selected  */
+#nav >li {
+    /* text-align: center; */
 }
 
-
-.logo {
-    width: 540px;
-    height: auto;
+#logo {
+    grid-column: 1 / 6;
 }
 
-#current-page {
-    color: white;
+#nav-item-1 {
+    grid-column: 7 / 9;
+}
+
+#nav-item-2 {
+    grid-column: 9 / 11;
+}
+
+#nav-item-3 {
+    grid-column: 11 / 13;
+}
+
+.current-page {
     border: white 2px solid;
-    padding: 36px 60px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column ;
+    text-align: center;
+}
+
+.current-page a {
+    color: white;
     text-decoration: none;
 }
+    
 
 /* -------------------------- landing area---------------------------------------- */
 
@@ -271,7 +287,7 @@ p {
 
 
 
-/* -----------------------secondary landing pages----------------------------- */
+/* -----------------------secondary pages----------------------------- */
 
 .landing-area.secondary-landing {
     top: 0px;
@@ -286,7 +302,8 @@ p {
 
 /* about fix */
 
-.about {
+.about,
+.contact {
     height: 85vh;
 }
 
