--- a/MTM6201/midterm/css/style.css
+++ b/MTM6201/midterm/css/style.css
@@ -239,21 +239,21 @@ li > a:hover {
 
 /* ----------------------------- body images hell---------------------------- */
 
-
-
 .section-1-background,
 .section-2-background,
 .section-3-background {
     display: grid;
     height: 100vh;
-    max-height: 100vh;
     grid-template-columns: 1fr 1fr calc(100vw - 228px) 1fr 1fr ;
     grid-template-rows: 1fr 1fr calc(100vh - 156px) 1fr 1fr ;
 }
 
 .section-size {
     position:relative;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -5;
 }
 
 .section-1-img-1,
@@ -283,6 +283,11 @@ li > a:hover {
     grid-row-end: 4;
 }
 
+.landing-body {
+    bottom: 80%;
+    position: relative;
+}
+
 /* -----------------------------------------------------Body Text sections--------------------------------- */
 
 .body{
@@ -303,10 +308,6 @@ li > a:hover {
 .contact-form {
     grid-column: 7 / 13;
 }
-
-
-
-
 
 /* -----------------------secondary pages----------------------------- */
 
