--- a/MTM6201/midterm/css/style.css
+++ b/MTM6201/midterm/css/style.css
@@ -253,7 +253,6 @@ li > a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -5;
 }
 
 .section-1-img-1,
@@ -283,10 +282,23 @@ li > a:hover {
     grid-row-end: 4;
 }
 
-.landing-body {
-    bottom: 80%;
-    position: relative;
+/* -----------------------getting text over the image----------------------------- */
+.section-text {
+    display: grid;
+    grid-template-rows: repeat(1, 2fr);
+
 }
+
+.section-text > * {
+    grid-row: 1 / 3;
+    grid-column: 1 ;
+    height: 100%;
+    position: relative;;
+}
+
+/* .landing-body {
+    align-self: center;
+} */
 
 /* -----------------------------------------------------Body Text sections--------------------------------- */
 
