--- a/MTM6201/midterm/css/style.css
+++ b/MTM6201/midterm/css/style.css
@@ -74,6 +74,7 @@ p {
     font-weight: 500;
     font-size: 20px;
     color: white;
+    text-align: justify;
 }
 
 a {
@@ -338,11 +339,30 @@ input.button {
     grid-column: 7 / 13;
 }
 
+/* used for animation later */
 .landing-body {
     opacity: 0;
 }
 
-/* --------------------------------------------------------------------body section animations */
+.landing-body > .header {
+    grid-column: 2 / 7;
+}
+
+.landing-body > .body-text {
+    grid-column: 7 / 12;
+}
+
+/* section 2 header spacing, as well as contact section header spacing */
+
+.section-2-img-3 > div > div > h1 {
+    line-height: 2em;
+}
+
+.contact > .header > h1 {
+    padding-bottom: 1em;
+}
+
+/* --------------------------------------------------------------------body section animations------------------------------------ */
 
 
 .section-1-background:hover >  .section-1-img-2,
@@ -381,7 +401,8 @@ input.button {
 
 .landing-area.secondary-landing {
     top: 0px;
-    display:block;
+    display:inline;
+    margin-bottom: -1em;
 }
 
 .landing {
@@ -474,4 +495,144 @@ footer {
     text-decoration: none;
     background-color: black;
     transition: .3s;
+}
+
+
+
+/* --------------------------------------------------------------------------RESPONSIVE---------------------------------------------------- */
+
+/* removing the  hover animation for mobile devices */
+
+@media (pointer:none), (pointer:coarse) {
+    
+    .section-1-background >  .section-1-img-2,
+    .section-1-background >  .section-1-img-3 > .section-size,
+    .section-2-background >  .section-2-img-2,
+    .section-2-background >  .section-2-img-3 > .section-size,
+    .section-3-background >  .section-3-img-2,
+    .section-3-background >  .section-3-img-3 > .section-size {
+        animation: fade .2s ease-out 0s 1 normal forwards;
+    }
+
+    .section-1-background >  .section-1-img-3 > .landing-body,
+    .section-2-background >  .section-2-img-3 > .landing-body,
+    .section-3-background >  .section-3-img-3 > .landing-body {
+        animation: fade-in .2s ease-in 0.2s 1 normal forwards;
+    }
+}
+
+
+/* rotating img sizing */
+@media screen and (max-width: 1750px){
+    body {
+        background-color: green;
+    }
+
+    .landing-area {
+        grid-template-columns: 1fr 1fr 400px 400px 1fr 1fr;
+    }
+
+    main {
+        overflow: hidden; 
+        /* THIS IS A LAZY FIX I KNOW BUT ITS THE ONLY WAY I COULD GET THIS ROTATING IMAGE TO STOP RESIZING THE PAGE, overflow hidden is not used anywhere else in the website though, before this */
+    }
+}
+
+
+@media screen and (max-width: 1100px){
+    body {
+        background-color: red;
+    }
+
+    .rotate {
+        grid-column: 1 / 7;
+    }
+
+    /* nav re-align */
+    .navbar {
+        height: 150px;
+    }
+
+    #nav {
+        grid-template-rows: 1fr 1fr;
+        height: 150px;
+    }
+
+    #logo {
+        grid-column: 1 / 13;
+    }
+
+    #nav-item-1 {
+        grid-column: 1 / 5;
+    }
+
+    #nav-item-2 {
+        grid-column: 5 / 9;
+    }
+
+    #nav-item-3 {
+        grid-column: 9 / 13;
+    }
+
+    .landing-area, .landing {
+        height: calc(100vh - 150px); 
+    }
+
+    .landing
+
+    /* font sizing */
+
+    h1 {
+        font-size: 50px;
+    }
+
+    .section-2-img-3 > .landing-body > .header > h1 {
+        font-size: 35px
+    }
+}
+
+@media screen and (max-width: 850px) {
+    
+    body{
+        background-color: orange;
+    }
+
+    /* font size back up due to realign */
+
+    .section-2-img-3 > .landing-body > .header > h1 {
+        font-size: 50px
+    }
+
+    /* changing alignment */
+
+    .body{
+        grid-template-columns: repeat(12, 1fr) ;
+        grid-template-rows: 1fr 1fr;
+    }
+    
+    .header{
+        grid-column: 1 / 13;
+        grid-row: 1 / 2;
+        text-align: center;
+    }
+    
+    .body-text {
+        grid-column: 1 / 13;
+        grid-row: 2 / 3;
+    }
+    
+    .contact-form {
+        grid-column: 1 / 13;
+    }
+
+    .landing-body > .header {
+        grid-column: 2 / 12;
+    }
+    
+    .landing-body > .body-text {
+        grid-column: 2 / 12;
+    }
+
+    
+
 }
